--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
